--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<h1>Tienda de cómics</h1>
+<!DOCTYPE html>
+ <html>
+  <head>
+   <meta charset="UTF-8">
+   <title>Autentificación Comics</title>
+   <script  src="http://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script> 
+
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+       
+   <!-- Latest compiled and minified CSS -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+   <!-- Optional theme -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">  
+
+  </head>
+
+  <body>
+    <div class="container">
+      <input id="txtEmail" type="email" placeholder="Email">
+      <input id="txtPassword" type="password" placeholder="Contraseña">
+      <button id = "btnLogin" class="btn btn-action">Login</button>
+      <button id = "btnSignUp" class="btn btn-secondary">Registrarse</button>
+ 
+    </div>
+
+<script src="fire.js"></script>
+   <script src="app.js"></script>
+
+  </body>
+ </html>
+
+
+  </body>
+
+</html>
